<resources>
    <string name="app_name">CoronaQuiz</string>

    <string name="back">Wróć</string>
    <string name="next">Dalej</string>

    <string name="description">
        Quiz to nie diagnoza i nie może być traktowany jak porada czy konsultacja medyczna. Wynik quizu ma charakter wyłącznie informacyjny. Pamiętaj, że tylko lekarz oraz test wykonany w laboratorium mogą potwierdzić chorobę.\n\nTwoje dane są bezpieczne. Quiz jest anonimowy, a informacje, które podajesz, nie opuszczą twojego urządzenia.
    </string>

    <string name="main_title">Sprawdź czy masz objawy COVID-19</string>
    <string name="start_quiz">Rozpocznij quiz</string>

    <string name="warning">Uwaga!</string>

    <string name="fever_question">Czy występuje u Ciebie gorączka?</string>
    <string name="fever_lt_38">Tak, mniej niż 38°</string>
    <string name="fever_gt_38">Tak, 38° lub więcej</string>

    <string name="cough_question">Kaszel</string>
    <string name="blood_cough">Tak, kaszel z krwawą wydzieliną</string>

    <string name="symptoms_acceleration_question">Czy objawy się nasilają?</string>
    <string name="shortness_of_breath_question">Czy występują u Ciebie duszności?</string>
    <string name="faster_breath_question">Czy występuje u Ciebie przyspieszony oddech?</string>

    <string name="yes">Tak</string>
    <string name="no">Nie</string>

    <string name="other_symptoms_question">Czy występują u ciebie inne objawy?</string>
    <string name="weakness">Osłabienie</string>
    <string name="muscle_ache">Bóle mięśni</string>
    <string name="chills">Dreszcze</string>
    <string name="headache">Ból głowy</string>
    <string name="runny_nose">Katar</string>
    <string name="diarrhea">Biegunka</string>
    <string name="nausea">Mdłości</string>
    <string name="sore_throat">Ból gardła</string>

    <string name="result_title">Wynik uzyskany na podstawie udzielonych przez Ciebie odpowiedzi:</string>
    <string name="info_and_recommendations">Informacje i zalecenia</string>
    <string name="more_info">Więcej informacji</string>

    <string name="low_risk">Niskie ryzyko infekcji</string>
    <string name="mid_risk">Średnie ryzyko infekcji</string>
    <string name="high_risk">Wysokie ryzyko infekcji</string>

    <string name="not_covid_title">Zgłoszone przez ciebie objawy nie wskazują na chorobę COVID-19 wywoływaną koronawirusem</string>
    <string name="not_covid_description">Twoje objawy mogą być związane z inną chorobą, dlatego lepiej pozostań w domu i nie spotykaj się z innymi ludźmi, dopóki nie wyzdrowiejesz. W ten sposób zmniejszysz ryzyko zakażenia siebie oraz innych.</string>
    <string name="high_risk_title">Twoje objawy są bardzo poważne i mogą wskazywać na zakażenie koronawirusem (choroba COVID-19)</string>
    <string name="high_risk_description">Bezzwłocznie zadzwoń do Powiatowej Stacji Sanitarno-Epidemiologicznej i zgłoś się do najbliższego szpitalnego oddziału zakaźnego lub obserwacyjno-zakaźnego. Unikaj kontaktu z innymi osobami.</string>
    <string name="stations">Stacje sanitarno-epidemiologiczne</string>
</resources>
