<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonsContainer"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:text="@string/result_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/quizImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_happy_face_24dp"
                android:tint="@color/green" />

            <TextView
                android:id="@+id/quizResult"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textStyle="bold"
                tools:text="Niskie ryzyko infekcji"
                tools:textColor="@color/green" />

        </LinearLayout>

        <TextView
            android:id="@+id/resultTitle"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:gravity="center"
            tools:text="@string/not_covid_title" />

        <TextView
            android:id="@+id/resultDescription"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            tools:text="@string/not_covid_description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:background="@color/separatorColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_info" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@color/separatorColor" />
        </LinearLayout>

        <Button
            android:id="@+id/infoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/info_and_recommendations" />

        <Button
            android:id="@+id/stationsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/stations" />
    </LinearLayout>
</RelativeLayout>